@@ -4409,7 +4409,7 @@ AT_DATA([progl.cob], [
            STOP RUN.
 ])
 
-AT_CHECK([$COMPILE -std=cobol2002 -fassign-ext-dyn=ok progl.cob], [0], [],
+AT_CHECK([$COMPILE -std=cobol2002 -fdump=all -fassign-ext-dyn=ok progl.cob], [0], [],
 [progl.cob:37: warning: RW VARYING clause is not implemented
 ])
 
